--- a/environment_CSC605.yml
+++ b/environment_CSC605.yml
@@ -3,9 +3,10 @@ channels:
   - anaconda
   - defaults
 dependencies:
+  - _anaconda_depends=2020.07=py38_0
   - _ipyw_jlab_nb_ext_conf=0.1.0=py38_0
   - alabaster=0.7.12=pyhd3eb1b0_0
-  - anaconda=2021.05=py38_0
+  - anaconda=custom=py38_1
   - anaconda-client=1.7.2=py38_0
   - anaconda-navigator=2.0.3=py38_0
   - anaconda-project=0.9.1=pyhd3eb1b0_1
@@ -43,11 +44,14 @@ dependencies:
   - brotlipy=0.7.0=py38h9ed2024_1003
   - bzip2=1.0.8=h1de35cc_0
   - c-ares=1.17.1=h9ed2024_0
-  - ca-certificates=2021.4.13=hecd8cb5_1
-  - certifi=2020.12.5=py38hecd8cb5_0
-  - cffi=1.14.5=py38h2125817_0
+  - ca-certificates=2021.10.26=hecd8cb5_2
+  - cairo=1.14.12=hc4e6be7_4
+  - certifi=2021.10.8=py38hecd8cb5_2
+  - cffi=1.15.0=py38hca72f7f_0
   - chardet=4.0.0=py38hecd8cb5_1003
   - click=7.1.2=pyhd3eb1b0_0
+  - click-plugins=1.1.1=pyhd3eb1b0_0
+  - cligj=0.7.2=py38hecd8cb5_0
   - cloudpickle=1.6.0=py_0
   - clyent=1.2.2=py38_1
   - colorama=0.4.4=pyhd3eb1b0_0
@@ -61,7 +65,7 @@ dependencies:
   - conda-verify=3.4.2=py_1
   - contextlib2=0.6.0.post1=py_0
   - cryptography=3.4.7=py38h2fd3fbb_0
-  - curl=7.71.1=hb0a8c7a_1
+  - curl=7.67.0=ha441bb4_0
   - cycler=0.10.0=py38_0
   - cython=0.29.23=py38h23ab428_0
   - cytoolz=0.11.0=py38haf1e3a3_0
@@ -78,20 +82,28 @@ dependencies:
   - expat=2.3.0=h23ab428_2
   - fastcache=1.1.0=py38h1de35cc_0
   - filelock=3.0.12=pyhd3eb1b0_1
+  - fiona=1.8.4=py38h9a122fd_0
   - flake8=3.9.0=pyhd3eb1b0_0
   - flask=1.1.2=pyhd3eb1b0_0
+  - fontconfig=2.13.1=ha9ee91d_0
   - freetype=2.10.4=ha233b18_0
+  - freexl=1.0.6=h9ed2024_0
   - fsspec=0.9.0=pyhd3eb1b0_0
   - future=0.18.2=py38_1
+  - gdal=2.3.3=py38hbe65578_0
+  - geopandas=0.6.1=py_0
+  - geos=3.7.1=h0a44026_0
   - get_terminal_size=1.0.0=h7520d66_0
   - gettext=0.21.0=h7535e17_0
   - gevent=21.1.2=py38h9ed2024_1
-  - glib=2.68.1=hdf23fa2_0
+  - giflib=5.1.4=h1de35cc_1
+  - glib=2.63.1=hd977a24_0
   - glob2=0.7=pyhd3eb1b0_0
   - gmp=6.2.1=h23ab428_2
   - gmpy2=2.0.8=py38h6ef4df4_3
   - greenlet=1.0.0=py38h23ab428_2
   - h5py=2.10.0=py38h3134771_0
+  - hdf4=4.2.13=h39711bb_2
   - hdf5=1.10.4=hfa1e0ec_0
   - heapdict=1.0.1=py_0
   - html5lib=1.1=py_0
@@ -115,6 +127,7 @@ dependencies:
   - jinja2=2.11.3=pyhd3eb1b0_0
   - joblib=1.0.1=pyhd3eb1b0_0
   - jpeg=9b=he5867d9_2
+  - json-c=0.13.1=h3efe00b_0
   - json5=0.9.5=py_0
   - jsonschema=3.2.0=py_2
   - jupyter=1.0.0=py38_7
@@ -127,24 +140,33 @@ dependencies:
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_server=2.4.0=pyhd3eb1b0_0
   - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
+  - kealib=1.4.7=hf5ed860_6
   - keyring=22.3.0=py38hecd8cb5_0
   - kiwisolver=1.3.1=py38h23ab428_0
-  - krb5=1.18.2=h75d18d8_0
+  - krb5=1.16.4=hddcf347_0
   - lazy-object-proxy=1.6.0=py38h9ed2024_0
   - lcms2=2.12=hf1fd2bf_0
   - libarchive=3.4.2=haa3ed63_0
-  - libcurl=7.71.1=h8a08a2b_1
+  - libboost=1.73.0=hd4c2dcd_11
+  - libcurl=7.67.0=h051b688_0
   - libcxx=10.0.0=1
+  - libdap4=3.19.1=h3d3e54a_0
   - libedit=3.1.20210216=h9ed2024_1
   - libev=4.33=haf1e3a3_0
-  - libffi=3.3=hb1e8313_2
+  - libffi=3.2.1=h0a44026_1007
+  - libgdal=2.3.3=h0950a36_0
   - libgfortran=3.0.1=h93005f0_2
   - libiconv=1.16=h1de35cc_0
+  - libkml=1.3.0=h952ee91_5
   - liblief=0.10.1=h0a44026_0
   - libllvm10=10.0.1=h76017ad_5
+  - libllvm9=9.0.1=h21ff451_1
+  - libnetcdf=4.6.1=hd5207e6_2
   - libpng=1.6.37=ha441bb4_0
+  - libpq=11.2=h051b688_0
   - libsodium=1.0.18=h1de35cc_0
   - libspatialindex=1.9.3=h23ab428_0
+  - libspatialite=4.3.0a=h644ec7d_19
   - libssh2=1.9.0=ha12b0ac_1
   - libtiff=4.2.0=h87d7836_0
   - libuv=1.40.0=haf1e3a3_0
@@ -173,6 +195,7 @@ dependencies:
   - mpmath=1.2.1=py38hecd8cb5_0
   - msgpack-python=1.0.2=py38hf7b0b51_1
   - multipledispatch=0.6.0=py38_0
+  - munch=2.5.0=pyhd3eb1b0_0
   - mypy_extensions=0.4.3=py38_0
   - navigator-updater=0.2.1=py38_0
   - nbclassic=0.2.6=pyhd3eb1b0_0
@@ -191,8 +214,9 @@ dependencies:
   - numpy-base=1.20.1=py38h585ceec_0
   - numpydoc=1.1.0=pyhd3eb1b0_1
   - olefile=0.46=py_0
+  - openjpeg=2.4.0=h66ea3da_0
   - openpyxl=3.0.7=pyhd3eb1b0_0
-  - openssl=1.1.1k=h9ed2024_0
+  - openssl=1.1.1m=hca72f7f_0
   - packaging=20.9=pyhd3eb1b0_0
   - pandas=1.2.4=py38h23ab428_0
   - pandoc=2.12=hecd8cb5_0
@@ -203,6 +227,7 @@ dependencies:
   - path.py=12.5.0=0
   - pathlib2=2.3.5=py38hecd8cb5_2
   - pathspec=0.7.0=py_0
+  - pathtools=0.1.2=pyhd3eb1b0_1
   - patsy=0.5.1=py38_0
   - pcre=8.44=hb1e8313_0
   - pep8=1.7.1=py38_0
@@ -210,10 +235,14 @@ dependencies:
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=8.2.0=py38h5270095_0
   - pip=21.0.1=py38hecd8cb5_0
+  - pixman=0.40.0=h9ed2024_1
   - pkginfo=1.7.0=py38hecd8cb5_0
   - plotly=5.1.0=pyhd3eb1b0_0
   - pluggy=0.13.1=py38hecd8cb5_0
   - ply=3.11=py38_0
+  - poppler=0.65.0=ha097c24_1
+  - poppler-data=0.4.10=hecd8cb5_0
+  - proj4=5.2.0=h0a44026_1
   - prometheus_client=0.10.1=pyhd3eb1b0_0
   - prompt-toolkit=3.0.17=pyh06a4308_0
   - prompt_toolkit=3.0.17=hd3eb1b0_0
@@ -224,7 +253,7 @@ dependencies:
   - pycodestyle=2.6.0=pyhd3eb1b0_0
   - pycosat=0.6.3=py38h1de35cc_1
   - pycparser=2.20=py_2
-  - pycurl=7.43.0.6=py38hddc9c9b_0
+  - pycurl=7.43.0.5=py38ha12b0ac_0
   - pydocstyle=6.0.0=pyhd3eb1b0_0
   - pyerfa=1.7.3=py38h9ed2024_0
   - pyflakes=2.2.0=pyhd3eb1b0_0
@@ -235,12 +264,13 @@ dependencies:
   - pyodbc=4.0.30=py38h0a44026_0
   - pyopenssl=20.0.1=pyhd3eb1b0_1
   - pyparsing=2.4.7=pyhd3eb1b0_0
+  - pyproj=1.9.6=py38h9c430a6_0
   - pyqt=5.9.2=py38h655552a_2
   - pyrsistent=0.17.3=py38haf1e3a3_0
   - pysocks=1.7.1=py38_1
   - pytables=3.6.1=py38h4727e94_0
   - pytest=6.2.3=py38hecd8cb5_2
-  - python=3.8.8=h88f2d9e_5
+  - python=3.8.2=hfe9666f_0
   - python-dateutil=2.8.1=pyhd3eb1b0_0
   - python-jsonrpc-server=0.4.0=py_0
   - python-language-server=0.36.2=pyhd3eb1b0_0
@@ -255,7 +285,7 @@ dependencies:
   - qtawesome=1.0.2=pyhd3eb1b0_0
   - qtconsole=5.0.3=pyhd3eb1b0_0
   - qtpy=1.9.0=py_0
-  - readline=8.1=h9ed2024_0
+  - readline=7.0=h1de35cc_5
   - regex=2021.4.4=py38h9ed2024_0
   - requests=2.25.1=pyhd3eb1b0_0
   - ripgrep=12.1.1=0
@@ -268,10 +298,12 @@ dependencies:
   - seaborn=0.11.1=pyhd3eb1b0_0
   - send2trash=1.5.0=pyhd3eb1b0_1
   - setuptools=52.0.0=py38hecd8cb5_0
+  - shapely=1.6.4=py38he8793f5_0
   - simplegeneric=0.8.1=py38_2
   - singledispatch=3.6.1=pyhd3eb1b0_1001
   - sip=4.19.8=py38h0a44026_0
   - six=1.15.0=py38hecd8cb5_0
+  - snappy=1.1.8=hb1e8313_0
   - sniffio=1.2.0=py38hecd8cb5_1
   - snowballstemmer=2.1.0=pyhd3eb1b0_0
   - sortedcollections=2.1.0=pyhd3eb1b0_0
@@ -289,7 +321,7 @@ dependencies:
   - spyder=4.2.5=py38hecd8cb5_0
   - spyder-kernels=1.10.2=py38hecd8cb5_0
   - sqlalchemy=1.4.7=py38h9ed2024_0
-  - sqlite=3.35.4=hce871da_0
+  - sqlite=3.33.0=hffcf06c_0
   - statsmodels=0.12.2=py38h9ed2024_0
   - sympy=1.8=py38hecd8cb5_0
   - tabulate=0.8.9=py38hecd8cb5_0
@@ -322,6 +354,7 @@ dependencies:
   - widgetsnbextension=3.5.1=py38_0
   - wrapt=1.12.1=py38haf1e3a3_1
   - wurlitzer=2.1.0=py38hecd8cb5_0
+  - xerces-c=3.2.3=h48eee30_0
   - xlrd=2.0.1=pyhd3eb1b0_0
   - xlsxwriter=1.3.8=pyhd3eb1b0_0
   - xlwings=0.23.0=py38hecd8cb5_0
